--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="bmi_weight">體重(kg)</string>
     <string name="bmi_btn">計算 BMI 值</string>
     <string name="bmi_result">你的 BMI 值是 </string>
+    <string name="dialog_title">關於 Android BMI</string>
+    <string name="dialog_message">Android BMI Calc</string>
+    <string name="dialog_btn_confirm">確認</string>
+    <string name="dialog_btn_cancel">取消</string>
 </resources>
