--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="dialog_btn_cancel">取消</string>
     <string name="input_error">忘記輸入數字了嗎?</string>
     <string name="homepage_label">首頁</string>
+    <string name="report_title">BMI 報告</string>
+    <string name="report_back">前一頁</string>
 </resources>
