--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,15 @@
 <resources>
     <string name="app_name">BMI_Basic</string>
-    <string name="bmi_height">身高(cm)</string>
-    <string name="bmi_weight">體重(kg)</string>
-    <string name="bmi_btn">計算 BMI 值</string>
-    <string name="bmi_result">你的 BMI 值是 </string>
-    <string name="dialog_title">關於 Android BMI</string>
+    <string name="bmi_height">Height(cm)</string>
+    <string name="bmi_weight">Weight(kg)</string>
+    <string name="bmi_btn">Calculate BMI Value</string>
+    <string name="bmi_result">Your BMI is </string>
+    <string name="dialog_title">About Android BMI</string>
     <string name="dialog_message">Android BMI Calc</string>
-    <string name="dialog_btn_confirm">確認</string>
-    <string name="dialog_btn_cancel">取消</string>
-    <string name="input_error">忘記輸入數字了嗎?</string>
-    <string name="homepage_label">首頁</string>
-    <string name="report_title">BMI 報告</string>
-    <string name="report_back">前一頁</string>
+    <string name="dialog_btn_confirm">Yes</string>
+    <string name="dialog_btn_cancel">Cancel</string>
+    <string name="input_error">Forget input Number?</string>
+    <string name="homepage_label">Home</string>
+    <string name="report_title">BMI Report</string>
+    <string name="report_back">previous</string>
 </resources>
