--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">BMI_Basic</string>
-    <string name="bmi_height">Height(cm)</string>
-    <string name="bmi_weight">Weight(kg)</string>
+    <string name="bmi_height">Height</string>
+    <string name="bmi_weight">Weight(lbs)</string>
     <string name="bmi_btn">Calculate BMI Value</string>
     <string name="bmi_result">Your BMI is </string>
     <string name="dialog_title">About Android BMI</string>
